--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.80.7",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4",
@@ -22,19 +25,24 @@
     "@storybook/addon-docs": "^9.0.9",
     "@storybook/addon-onboarding": "^9.0.9",
     "@storybook/addon-vitest": "^9.0.9",
+    "@storybook/react": "^9.0.9",
     "@storybook/react-vite": "^9.0.9",
+    "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^9.0.9",
     "globals": "^16.0.0",
     "playwright": "^1.53.0",
+    "postcss": "^8.5.5",
     "storybook": "^9.0.9",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
