--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
@@ -39,8 +49,11 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^9.0.9",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.1",
     "playwright": "^1.53.0",
     "postcss": "^8.5.5",
+    "prettier": "^3.5.3",
     "storybook": "^9.0.9",
     "tailwindcss": "^4.1.10",
     "typescript": "~5.8.3",
