--- a/package.json
+++ b/package.json
@@ -1,64 +1,73 @@
 {
-  "name": "go2go",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,css,md}": [
-      "prettier --write"
-    ]
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.80.7",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-error-boundary": "^6.0.0",
-    "react-router-dom": "^7.6.2"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^4",
-    "@eslint/js": "^9.25.0",
-    "@storybook/addon-a11y": "^9.0.9",
-    "@storybook/addon-docs": "^9.0.9",
-    "@storybook/addon-onboarding": "^9.0.9",
-    "@storybook/addon-vitest": "^9.0.9",
-    "@storybook/react": "^9.0.9",
-    "@storybook/react-vite": "^9.0.9",
-    "@types/node": "^24.0.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "@vitest/browser": "^3.2.3",
-    "@vitest/coverage-v8": "^3.2.3",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.0.9",
-    "globals": "^16.0.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.1",
-    "playwright": "^1.53.0",
-    "postcss": "^8.5.5",
-    "prettier": "^3.5.3",
-    "storybook": "^9.0.9",
-    "tailwindcss": "^4.1.10",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.3"
-  }
+	"name": "go2go",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"prepare": "husky",
+		"tailwind-init": "tailwindcss init -p"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.{json,css,md}": [
+			"prettier --write"
+		]
+	},
+	"dependencies": {
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/themes": "^3.2.1",
+		"@tanstack/react-query": "^5.80.7",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.516.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-error-boundary": "^6.0.0",
+		"react-router-dom": "^7.6.2",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@chromatic-com/storybook": "^4",
+		"@eslint/js": "^9.25.0",
+		"@storybook/addon-a11y": "^9.0.9",
+		"@storybook/addon-docs": "^9.0.9",
+		"@storybook/addon-onboarding": "^9.0.9",
+		"@storybook/addon-vitest": "^9.0.9",
+		"@storybook/react": "^9.0.9",
+		"@storybook/react-vite": "^9.0.9",
+		"@types/node": "^24.0.1",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"@vitejs/plugin-react-swc": "^3.9.0",
+		"@vitest/browser": "^3.2.3",
+		"@vitest/coverage-v8": "^3.2.3",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^9.25.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"eslint-plugin-storybook": "^9.0.9",
+		"globals": "^16.0.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^16.1.1",
+		"playwright": "^1.53.0",
+		"postcss": "^8.5.5",
+		"prettier": "^3.5.3",
+		"storybook": "^9.0.9",
+		"tailwindcss": "^3.4.17",
+		"typescript": "~5.8.3",
+		"typescript-eslint": "^8.30.1",
+		"vite": "^6.3.5",
+		"vitest": "^3.2.3"
+	}
 }
