--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		]
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/themes": "^3.2.1",
