--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@storybook/addon-vitest": "^9.0.9",
 		"@storybook/react": "^9.0.9",
 		"@storybook/react-vite": "^9.0.9",
+		"@svgr/webpack": "^8.1.0",
 		"@types/node": "^24.0.1",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
@@ -70,6 +71,7 @@
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.30.1",
 		"vite": "^6.3.5",
+		"vite-plugin-svgr": "^4.3.0",
 		"vitest": "^3.2.3"
 	}
 }
