--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@tanstack/react-query": "^5.80.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.18.1",
 		"lucide-react": "^0.516.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
