--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-# .github/workflows/deploy.yml
-
 name: Deploy to Cloudflare Pages
 
 on:
@@ -49,6 +47,8 @@ jobs:
 
       - name: Build project
         run: pnpm run build
+        env:
+          VITE_API_URL: ${{ secrets.VITE_API_URL }} 
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
