--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.18.1",
 		"lucide-react": "^0.516.0",
+		"nanoid": "^5.1.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-error-boundary": "^6.0.0",
